[gd_scene load_steps=8 format=3 uid="uid://bb3x8klcnp57t"]

[ext_resource type="Script" path="res://Scenes/Windows/WelcomeWindow/WelcomeWindow.gd" id="1_lwilb"]
[ext_resource type="Texture2D" uid="uid://uyec6noccly6" path="res://Assets/Icons/new_file_icon.png" id="2_rymve"]
[ext_resource type="Texture2D" uid="uid://t1i3wy037vsu" path="res://Assets/Icons/folder_icon.png" id="3_ktkps"]
[ext_resource type="Texture2D" uid="uid://c7vdr4e0mxst6" path="res://Assets/Icons/close_icon.png" id="4_gaqb0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wb4lr"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.129412, 0.14902, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_1l82f"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7mcdy"]
font_color = Color(0.423529, 0.423529, 0.423529, 1)

[node name="WelcomeWindow" type="Window"]
auto_translate_mode = 1
transparent_bg = true
initial_position = 2
size = Vector2i(563, 100)
wrap_controls = true
unresizable = true
borderless = true
always_on_top = true
transparent = true
script = ExtResource("1_lwilb")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wb4lr")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NewFileBtn" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "New File"
icon = ExtResource("2_rymve")

[node name="OpenFileBtn" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Open File..."
icon = ExtResource("3_ktkps")

[node name="CancelFileBtn" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Cancel"
icon = ExtResource("4_gaqb0")

[node name="RecentFilesContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer2"]
visible = false
layout_mode = 2

[node name="RecentFilesLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer2/RecentFilesContainer"]
layout_mode = 2
text = "Recent files"
label_settings = SubResource("LabelSettings_1l82f")

[node name="ButtonContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer2/RecentFilesContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="VersionLabel" type="Label" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "v.X.X.X"
label_settings = SubResource("LabelSettings_7mcdy")
